# SoftProjectEx2

./: CMakeLists.txt  SPBPriorityQueue.c  SPBPriorityQueue.h  SPPoint.c  main.c  main_aux.c  main_aux.h  makefile  partners.txt
unit_tests/: sp_bpqueue_unit_tests.c
